--- a/_posts/paper_summary/rade/comprehension_2.html
+++ b/_posts/paper_summary/rade/comprehension_2.html
@@ -10,4 +10,5 @@ Using an adversarially fine-tuned network (trained on CIFAR-10) using TRADES wit
 <b>Claim (3):</b>  Pushing the decision boundary only slightly achieves enough robustness (while maintaining accuracy). New algorithm called "Helper-based Adversarial Training" (HAT) provides better robustness without sacrificing the accuracy compared to existing adversarial defenses.<br><br>
 The effect of <em>Helper-based Adversarial Training (HAT)</em> is claimed through experimental results that compare the accuracy and robustness of the networks adversarially trained with HAT and 3 other adversarial training methods.<br><br>
 <a href="/assets/images/rade_2.PNG" target="_blank"><img src="/assets/images/rade_2.PNG"/></a> <br><br>
-The effect of HAT is also proven with different attack configurations (different <em>L<sub>&infin;</sub></em> and <em>L<sub>2</sub></sub></em> values) and with larger datasets (TinyImageNet-200 and ImageNet-100).
+The effect of HAT is also proven with different attack configurations (different <em>L<sub>&infin;</sub></em> and <em>L<sub>2</sub></em> values) and with larger datasets (TinyImageNet-200 and ImageNet-100).<br>
+The benefit of HAT can also work with methods have been observed to increase robustness such as extra training data and wider/more network capacity.
