--- a/_posts/paper_summary/rade/eval_1.html
+++ b/_posts/paper_summary/rade/eval_1.html
@@ -1,6 +1,7 @@
 <!-- Are the contributions significant? -->
-
+<font size="3">
 <em>Disclaimer: This is the first paper I read talking about decision boundaries and its effect in adversarial robustness. I'm not sure whether the contribution is significant with respect to other research done in this area of adversarial training and decision boundary (margin) analysis.</em>
+</font>
 <br>
 Because of the disclaimer above, I will talk about the significance of the contribution with respect to what I know.
 <br>
