--- a/_posts/paper_summary/rade/comprehension_2.html
+++ b/_posts/paper_summary/rade/comprehension_2.html
@@ -6,12 +6,12 @@ The central argument from this graph is that the left-most image shows greatest 
 
 <b>Claim (2):</b>  <em>"The drastic rise in the margin along the initial adversarial training direction is directly correlated to the observed reduction in accuracy."</em> <br><br>
 Using an adversarially fine-tuned network (trained on CIFAR-10) using TRADES with various robustness-accuracy trade-off variable. As this variable was increased in the experiment, the margin also increased in the direction of the initial adversarial direction along with increased reduction in accuracy.<br><br>
-<a href="/assets/images/rade_1.PNG" target="_blank"><img src="/assets/images/rade_1.PNG" height="250" width="350"/></a>
+<a href="/assets/images/rade_1.PNG" target="_blank"><img src="/assets/images/rade_1.PNG" height="200"/></a>
 <br><br>
 
 <b>Claim (3):</b>  Pushing the decision boundary only slightly achieves enough robustness (while maintaining accuracy). New algorithm called "Helper-based Adversarial Training" (HAT) provides better robustness without sacrificing the accuracy compared to existing adversarial defenses.<br><br>
 The effect of <em>Helper-based Adversarial Training (HAT)</em> is claimed through experimental results that compare the accuracy and robustness of the networks adversarially trained with HAT and 3 other adversarial training methods.<br><br>
-<a href="/assets/images/rade_2.PNG" target="_blank"><img src="/assets/images/rade_2.PNG" height="250" width="500"/></a>
+<a href="/assets/images/rade_2.PNG" target="_blank"><img src="/assets/images/rade_2.PNG" height="350"/></a>
 <br><br>
 The effect of HAT is also proven with different attack configurations (different <em>L<sub>&infin;</sub></em> and <em>L<sub>2</sub></em> values) and with larger datasets (TinyImageNet-200 and ImageNet-100).<br>
 The benefit of HAT can also work with methods have been observed to increase robustness such as extra training data and wider/more network capacity.
