--- a/_posts/paper_summary/uesato/comprehension_1.html
+++ b/_posts/paper_summary/uesato/comprehension_1.html
@@ -1,1 +1,2 @@
-
+<b>Claim (1):</b>  Adversarial training induces a significant decrease in the curvature of the decision boundary and the loss landscape in the input space.<br><br>
+(My question is how do you study the loss landscape in the input space?)
