--- a/_posts/paper_summary/uesato/comprehension_1.html
+++ b/_posts/paper_summary/uesato/comprehension_1.html
@@ -1,2 +1,8 @@
-<b>Claim (1):</b>  Adversarial training induces a significant decrease in the curvature of the decision boundary and the loss landscape in the input space.<br><br>
-(My question is how do you study the loss landscape in the input space?)
+<b>Claim (1):</b>  Adversarial training induces a significant decrease in the curvature of the decision boundary and the loss landscape in the input space.<br>
+(Q: How do you study the loss landscape in the input space?)
+<br><br>
+<b>Claim (2):</b> Establish upper and lower bounds of the network's robustness towards adversarial perturbations with respect to the curvature of the loss.
+These bounds indicate that curvature minimization and robustness are correlated.
+<br><br>
+<b>Claim (3):</b> New <em>efficient</em> regularization technique that mimicks the effect of adversarial training (the curvature minimization),
+which leads to more robust network that is comparable to the performance of adversarial training.
