--- a/_posts/paper_summary/uesato/comprehension_2.html
+++ b/_posts/paper_summary/uesato/comprehension_2.html
@@ -1,1 +1,14 @@
-c
+<b>Claim (1):</b>  Adversarial training induces a significant decrease in the curvature of the decision boundary and the loss landscape in the input space.
+<br><br>
+Claim 1 substantiation
+<br><br>
+
+<b>Claim (2):</b> Existience of upper and lower bounds of robustness indicate that curvature minimization and robustness are correlated.
+<br><br>
+Claim 2 substantiation
+<br><br>
+
+
+<b>Claim (3):</b> New <em>efficient</em> regularization technique that mimicks the effect of adversarial training (the curvature minimization).
+<br><br>
+Claim 3 substantiation
